conn-presence.c: make shared invisibility work after the server update

The new version of the Google Talk servers supports a newer version of
shared status. Because of an unknown version string we were assuming
invisibility was not supported. We now just fall back from "hidden" to
"dnd" if another resource doesn't support shared invisibility.

Fixes: <https://bugs.freedesktop.org/show_bug.cgi?id=38706>